[package]
name = "sixtyfourgame"
authors = ["Mike Tourigny <mike@sixtyfourgame.com>"]
version = "0.1.0"
edition = "2018"
repository = "https://github.com/turnyay/sixtyfourgame"
license = "Apache-2.0"
homepage = "https://sixtyfourgame.com/"
publish = false

[dependencies]
num-derive = "0.3"
num-traits = "0.2"
bytemuck = "1.4.0"
thiserror = "1.0.21"
byteorder = "1.3"
solana-program = "1.5.0"
solana-sdk = "1.5.0"
spl-token = "3.0.1"

[features]
test-bpf = []
no-entrypoint = []
program = ["solana-sdk/program"]
default = ["solana-sdk/default"]

[dev-dependencies]
assert_matches = "1.4.0"
solana-program-test = "1.5.0"
solana-sdk = "1.5.0"
solana-validator = "1.5.0"
tokio = { version = "0.3", features = ["macros"]}

[lib]
name="sixtyfourgame"
crate-type = ["cdylib", "lib"]
