[package]
name = "sixtyfourgame"
authors = ["Mike Tourigny <mike@sixtyfourgame.com>"]
version = "0.1.0"
edition = "2018"
repository = "https://github.com/turnyay/sixtyfourgame"
license = "Apache-2.0"
homepage = "https://sixtyfourgame.com/"
publish = false

[dependencies]
num-derive = "0.3"
num-traits = "0.2"
bytemuck = "1.4.0"
arrayref = "0.3.6"
solana-sdk = { version = "1.4.5", default-features = false, optional = true }
byteorder = "1.3"
solana-program = "1.5.0"
thiserror = "1.0.21"
spl-token = {version = "3.0.1", features = ["no-entrypoint"]}

[features]
test-bpf = []
no-entrypoint = []
program = ["solana-sdk/program"]
default = ["solana-sdk/default"]

[lib]
name="sixtyfourgame"
crate-type = ["cdylib", "lib"]
